# Projet5_mission

./: .gitignore  Dockerfile  README.md  app.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  hf-deploy.yml
data/processed/: X_encoded.csv
database/: check_data.py  create_db.py  db_config.py
docs/: api.md  architecture.md  database.md  deployment.md  index.md
docs_sphinx/source/: conf.py  index.rst
functions/: Khelladi_Faiza_2_Fonctions_1602.py
models/: trained_model.pkl
tests/: test_api.py  test_data_schema.py  test_functions.py  test_model_loading.py  test_model_performance.py
