[project]
name = "projet4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imbalanced-learn>=0.14.1",
    "importlib>=1.0.4",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mlxtend>=0.24.0",
    "notebook>=7.5.3",
    "numpy>=2.0",
    "pandas>=3.0.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.10.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "statsmodels>=0.14.6",
    "xgboost>=3.2.0",
]
